JT-1712 Fix center of state avg arrow not aligning correctly

--- a/app/assets/stylesheets/gs/school_profiles/test_score_graph.scss
+++ b/app/assets/stylesheets/gs/school_profiles/test_score_graph.scss
@@ -1,15 +1,18 @@
 .bar-graph {
-  position: relative;
   width: 100%;
 
   .arrow-down {
-    position: absolute;
-    top: -10px;
-    width: 0;
-    height: 0;
-    border-left: 7px solid transparent;
-    border-right: 7px solid transparent;
-    border-top: 9px solid #b2b2b2;
+    position: relative;
+    left: -7px;
+    > span {
+      position: absolute;
+      top: -10px;
+      width: 0;
+      height: 0;
+      border-left: 7px solid transparent;
+      border-right: 7px solid transparent;
+      border-top: 9px solid #b2b2b2;
+    }
   }
 
   .color-row {
